# USVTraining

guides/: week1.md
training_controller/: package.xml  setup.cfg  setup.py
training_localization/: package.xml  setup.cfg  setup.py
training_localization/config/physical/: ekf.yaml  sensor_config.yaml
training_localization/config/simulation/: ekf.yaml
training_localization/launch/: ekf.launch.py
training_localization/training_localization/: republisher_node.py
training_msgs/: CMakeLists.txt  package.xml
training_msgs/msg/: BoundingBox.msg  BoundingBoxArray.msg
training_navigation/: package.xml  setup.cfg  setup.py
training_navigation/config/physical/: navigation.yaml
training_navigation/config/simulation/: navigation.yaml
training_navigation/launch/: rviz.launch.py  test_navigation.launch.py
training_navigation/training_navigation/: planner.py  test_navigation_node.py
training_perception/: CMakeLists.txt  package.xml  setup.cfg  setup.py
training_perception/config/physical/: euclidean_clustering.yaml  lidar_filter.yaml
training_perception/config/simulation/: euclidean_clustering.yaml  lidar_filter.yaml
training_perception/launch/: main.launch.py
training_perception/training_perception/: euclidean_clustering_node.cpp  lidar_filter_node.cpp
